# toy_code

./: README.md
.demo_flight_old/: CMakeLists.txt~
.demo_flight_old/launch/: demo_all.launch~  demo_drone.launch~
.demo_flight_old/msg/: ekf_data.msg~  stick_data.msg
.demo_flight_old/src/: ekf_vicon (copy).cpp  ekf_vicon.cpp  oreitation_stick_vicon.cpp  path_manege.cpp  pid_controller.cpp
.demo_flight_old/src/EKF_lib/: ekf.cpp  ekf.h
.demo_flight_old/src/PID_lib/: pid.cpp
.demo_flight_old/src/_EKF_lib/: ekf.cpp  ekf.h
cv_process/: CMakeLists.txt  package.xml
cv_process/msg/: aruco_marker.msg
cv_process/src/: aruco_test.cpp  aruco_video.cpp
demo_flight/: CMakeLists.txt  CMakeLists.txt~  README.md
demo_flight/launch/: demo_ground.launch~
demo_flight/src/: demo_drone.cpp  ekf_vicon.cpp  oreitation_stick_vicon.cpp  pid_controller.cpp  waypoint_generation.cpp
g2o_test/: CMakeLists.txt  build_thirdparty.sh  build_thirdparty_lib.sh~  main.cpp
kd_tree/: kd_tree.h
read_camera/: CMakeLists.txt  README.md  package.xml  readme.txt
read_camera/launch/: cam.launch
read_camera/src/: camera_reader.cpp  image_save.cpp  video_load.cpp
sim_drone/launch/: test_quad.launch  test_quad.launch~
test/: eigen_test  eigen_test.cpp
ultrasonic_radar/: CMakeLists.txt~  data.txt  package.xml  package.xml~
ultrasonic_radar/launch/: radar.launch
ultrasonic_radar/msg/: radar_msg.msg
ultrasonic_radar/scripts/: serial_ACM0.py
ultrasonic_radar/src/: radar_node.cpp
vicon_bridge/launch/: vicon.launch
vicon_visualize/src/: main.cpp
(+7 files in other folders)
